--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
             steps {
                 script {
 
-                    sh 'git clone https://$GIT_TOKEN/simple-project.git'
+                    sh 'git clone https://$GIT_TOKEN@github.com/suraj-v86/simple-project.git' 
 
                 }
                 
